--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         
     </head>
     <body>
-
         <main>
             <h1>Sobre mim</h1>
 
@@ -72,7 +71,7 @@
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
                 </nav>
-                <ul id="inline">
+                <ul class="inline">
                    <li><a href="https://www.github.com/joaodasilva"><img src="github.png" alt="github"></a></li>
                    <li><a href="https://www.twiter.com/joaodasilva"><img src="twitter.png" alt="twiter"></a></li>
                    <li><a href="https://www.linkedim.com/joaodasilva"><img src="linkedin.png" alt="linkedim"></a></li>
